# rustic-chain-of-blocks

./: .gitignore  Cargo.toml  README.md  app.js  package-lock.json  package.json  rustfmt.toml
crates/core/: Cargo.toml
crates/core/src/: account.rs  block.rs  blockchain.rs  lib.rs  mempool.rs  p2p.rs  transaction.rs
crates/helper/: Cargo.toml
http_server/: app.js  package-lock.json  package.json
src/: transaction.rs
