[workspace]
members = ["crates/core", "crates/helper"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
log = "0.4.21"
eyre = "0.6.12"
once_cell = "1.19.0"
serde_json = "1.0.116"
pretty_env_logger = "0.5.0"
futures = "0.3.30"
tokio = { version = "1.37", features = ["full"] }
serde = {version = "1.0.198", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
libp2p = { version = "0.53.2", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }