[package]
name = "rustic-chain-of-blocks"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Abstract implementation of Ethereum"

[dependencies]
log.workspace = true
eyre.workspace = true
sha3.workspace = true
tokio.workspace = true
serde.workspace = true
ethers.workspace = true
libp2p.workspace = true
futures.workspace = true
base16ct.workspace = true
once_cell.workspace = true
serde_json.workspace = true
pretty_env_logger.workspace = true
tracing-subscriber.workspace = true